--- a/cv-to-pdf/pyproject.toml
+++ b/cv-to-pdf/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "cv-management"
+name = "cv-to-pdf"
 version = "0.1.0"
 description = ""
 authors = [
@@ -8,8 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "jinja2 (>=3.1.6,<4.0.0)",
-    "pdfkit (>=1.0.0,<2.0.0)"
+    "pdfkit (>=1.0.0,<2.0.0)",
+    "jinja2 (>=3.1.6,<4.0.0)"
 ]
 
 
