Additional configs for wkhtmltopdf

--- a/cv_to_pdf/docker/Dockerfile.wkhtmltopdf
+++ b/cv_to_pdf/docker/Dockerfile.wkhtmltopdf
@@ -2,14 +2,20 @@ FROM amazonlinux:2 AS wkhtmltopdf_builder
 
 RUN yum update -y
 
-# Dependencies required for building
-RUN yum install -y libXrender libXext libX11 fontconfig freetype zip
+# Dependencies required for pdfkit
+RUN yum install -y libXrender libXext libX11 freetype zip
 
-# Fonts
-RUN yum install -y fontconfig dejavu-sans-fonts dejavu-serif-fonts liberation-fonts
+# Fonts files
+RUN yum install -y dejavu-sans-fonts dejavu-serif-fonts liberation-fonts
 
-# wkhtmltopdf binary
+# wkhtmltopdf binary (https://wkhtmltopdf.org/downloads.html)
+# Amazon Linux 2 is based on CentOS 7, so I went with this image
+# There's a specific Amazon Linux package, but didn't work well out-of-the-box for me
 RUN yum install -y https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6-1/wkhtmltox-0.12.6-1.centos7.x86_64.rpm
+
+# # Use if connection is poor :( (requires manual download)
+# COPY wkhtmltox-0.12.6-1.centos7.x86_64.rpm /
+# RUN yum install -y /wkhtmltox-0.12.6-1.centos7.x86_64.rpm
 
 RUN mkdir -p /layer/bin
 RUN mkdir -p /layer/lib
