--- a/cv_to_pdf/pyproject.toml
+++ b/cv_to_pdf/pyproject.toml
@@ -8,8 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "pdfkit (>=1.0.0,<2.0.0)",
-    "jinja2 (>=3.1.6,<4.0.0)"
+    "jinja2 (>=3.1.6,<4.0.0)",
+    "weasyprint (>=65.1,<66.0)"
 ]
 
 
